# OpenGL-Voxel-Engine

./: .gitignore  CMakeLists.txt  README.md
Engine/: main.cpp
Engine/ChunkManager/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h
Engine/camera/: camera.h
Engine/game/: Game.h
Engine/gameobjects/drawables/: Skybox.cpp  Skybox.h  drawable.h
Engine/gameobjects/light/: SimpleLight.cpp  SimpleLight.h
Engine/gameobjects/player/: Player.cpp  Player.h
Engine/inputmanager/: InputManager.cpp  InputManager.h
Engine/renderer/: Renderer.cpp  Renderer.h
Engine/resources/: resourcemanager.cpp  resourcemanager.h
Engine/resources/shaders/: shader.cpp  shader.h
Engine/resources/shaders/fragment/: red.fs  texture_lighted.fs  white_lighted.fs
Engine/resources/shaders/vertex/: basic.vs  texture_lighted.vs
Engine/resources/textures/: texture.cpp  texture.h
Engine/resources/textures/png/: credits.txt
Engine/terrain-generation/: TerrainGenerator.cpp  TerrainGenerator.h
Engine/ui/: Ui.cpp  Ui.h
Engine/utilities/enums/: block.h  ui_states.h
Engine/utilities/structs/: coord.h  coord3d.h
libs/glad/: glad.c  glad.h
libs/glfw-3.3/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/glfw-3.3/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
libs/glfw-3.3/src/: Makefile  cmake_install.cmake  cocoa_init.m
libs/glfw-3.3/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  vulkan  windows
libs/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+1 files in other folders)
